[tool.poetry]
name = "cpp-book"
version = "1.0.0"
description = "Learning C++ from scratch"
authors = ["Ida Kenichiro"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1"
mkdocs-material = "^5.0.2"
pymdown-extensions = "^7.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
