[tool.poetry]
name = "cpp-book"
version = "1.0.0"
description = "Learning C++ from scratch"
authors = ["Ida Kenichiro", "Kamei Shogo", "Kubo Koki"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
